# openenv-finops

./: .gitignore  Dockerfile  README.md  baseline.py  eval.py  inference.py  openenv.yaml  pyproject.toml  record_episode.py  requirements.txt  results.json  server.py
data/: episode_hybrid_1775211260.json  episode_rule_based_1777297771.json  manifest.json
server/: app.py
src/: env.py  graders.py  models.py
web/: app.js  index.html  styles.css
