[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-finops"
version = "0.1.0"
description = "FinOps AI agent evaluation environment — OpenEnv compatible"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.6.1",
    "pyyaml==6.0.1",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server:main"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

